--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -1,5 +1,17 @@
 name: Team awesome's approval workflow
+
 on: pull_request_review
+
 jobs:
   labelWhenApproved:
     runs-on: ubuntu-latest
+  
+    steps:
+      - name: Label approved pull requests
+        uses: abinoda/label-when-approved-action@1.0.5
+        env: 
+          APROVALS: "1"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ADD_LABEL: "approved"
+
+  
