--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,39 +6,52 @@ name: Node CI
 on: [push]
 
 jobs:
-      - uses: actions/upload-artifact@master
-    needs: build
-          name: webpack artifacts
-          path: public/
+  build:
+      name: Build
+      
+      runs-on: ubuntu-latest
+    
+      steps:
+        - name: Checkout the repository
+          uses: actions/checkout@v2
+        
+        - name: npm install and build webpack
+          run: |
+            npm install
+            npm run build
 
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: npm install and build webpack
-        run: |
-          npm install
-          npm run build
+        - name: Archive Build Artifiacts
+          uses: actions/upload-artifact@master
+          with:
+            name: webpack artifacts
+            path: public/
 
   test:
-    - uses: actions/download-artifact@main
-      with:
-        name: webpack artifacts
-        path: public
-    - name: npm install, and test
-    runs-on: ubuntu-latest
+    needs: build
+    
+    name: Test
 
+    runs-on: ubuntu-latest
+    
     strategy:
       matrix:
         os: [ubuntu-latest, windows-2016]
         node-version: [12.x, 14.x]
 
     steps:
+    - name: npm install, and test
+      uses: actions/download-artifact@main
+      with:
+        name: webpack artifacts
+        path: public
+    
     - uses: actions/checkout@v2
+    
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    
     - name: npm install, and test
       run: |
         npm install
